# cerberus

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  TESTING.md  claude_desktop_config.json  conftest.py  demo_script.md  pyproject.toml  requirements.txt
.claude/: launch.json
.github/workflows/: ci.yml
adversary/: attacker.py
cerberus/: __init__.py  cli.py  events.py  gateway.py  labels.py  mcp_client.py  mcp_config.py  mcp_server.py  sentinel.py  session_state.py  tracer.py  warden.py
dashboard/: app.py  index.html
dashboard/static/: app.js  styles.css
eval/: agentdojo_runner.py
host/: agent.py
policies/: default.yaml
sandbox/: fake_aws_credentials  fake_id_rsa  runbook.md
servers/: docsearch.py  exfil_server.py  filesystem.py  servers.yaml  weather.py
siem/: __init__.py  cli.py  correlate.py  mappings.py  parser.py  report.py  sigma_eval.py
siem/rules/: honeytoken_trip.yml  leak_meter_threshold.yml  repeated_egress_denials.yml  rug_pull_drift.yml  trifecta_formation.yml
tests/: conftest.py  test_dashboard.py  test_gateway_e2e.py  test_labels.py  test_mcp_client.py  test_mcp_server.py  test_receipts.py  test_sentinel.py  test_siem.py  test_trifecta.py  test_warden.py
